Modifications mineures